--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <body>
     <h1>Nauka gita 2 klonowanie</h1>
     <h2> Zapraszam serdecznie</h2>
+    <p> Lorem ipsum lorem ipsum </p>
   </body>
 </html>
