--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="sass/style.scss" />
-    <title>Document</title>
-  </head>
-  <body>
-    <h1>Nauka gita 2 klonowanie</h1>
-    <h2>Zapraszam serdecznie</h2>
-    <p>Lorem ipsum lorem ipsum</p>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="sass/style.scss" />
+  <title>Document</title>
+</head>
+
+<body>
+  <h1>Nauka gita 2 klonowanie</h1>
+  <h2>Zapraszam serdecznie</h2>
+  <h3>Kolejna zmiana devTadek</h3>
+  <p>Lorem ipsum lorem ipsum</p>
+</body>
+
 </html>
