--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="sass/style.scss" />
-  <title>Document</title>
+  <title>Document MASTER</title>
 </head>
 
 <body>
@@ -13,6 +13,7 @@
   <h2>Zapraszam serdecznie</h2>
   <h3>Kolejna zmiana devTadek</h3>
   <p>Lorem ipsum lorem ipsum</p>
+  <p>MASTER</p>
 </body>
 
 </html>
