Testing pull request devKasia

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <h3>Kolejna zmiana devTadek</h3>
   <p>Lorem ipsum lorem ipsum</p>
   <p>KASIA</p>
+
+  <p>Testing pull request</p>
 </body>
 
 </html>
